[package]
name = "iot-sensor"
version = "0.1.0"
authors = ["Rama Rahardi <rama.orion@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
embedded-hal = "0.2.7"
embedded-svc = "0.24.0"
esp-idf-hal = "0.40.1"
esp-idf-svc = "0.45.0"
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }


[build-dependencies]
embuild = "0.31.1"
